--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,6 @@ spring.jpa.show-sql=true
 
 spring.resources.add-mappings=true
 
-spring.security.user.name=alma
-spring.security.user.password=password123
+#spring.security.user.name=alma
+#spring.security.user.password=password123
+security.basic.enabled=false
