--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,9 @@ server.port=8080
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/honeyandsalt?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.jpa.generate-ddl=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.database=mysql
@@ -14,4 +15,4 @@ spring.resources.add-mappings=true
 
 #spring.security.user.name=alma
 #spring.security.user.password=password123
-security.basic.enabled=false
+spring.messages.basename=validation
