--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	</parent>
 	<groupId>webler.szakdolgozat</groupId>
 	<artifactId>honeyAndSalt</artifactId>
+	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>honeyAndSalt</name>
 	<description>Salt and Honey - The Recipe Searching app in spring</description>
