--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,5 +29,6 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=*
 
 mail.sender.email=info@honeyandsalt.com
