refactor project name

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>webler.szakdolgozat</groupId>
-	<artifactId>honeyAndSalt</artifactId>
+	<artifactId>honeyandsalt</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>honeyAndSalt</name>
