.log file added - app.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,10 @@ spring.datasource.password=
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
 
+logging.file.name=honeyandsalt.log
+trace=false
+debug=true
+
 spring.resources.add-mappings=true
 
 #spring.security.user.name=alma
