--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-honeyandsalt.log
+honeyandsalt.log*
 
 ### STS ###
 .apt_generated
