search function done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.datasource.password=
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
 
+logging.level.org.springframework.boot.autoconfigure=ERROR
 logging.file.name=honeyandsalt.log
 trace=false
 debug=true
