admin role added, problem fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,8 +26,8 @@ spring.messages.basename=validation
 ### MAIL ###
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.ethereal.email
-spring.mail.username=lulu.dietrich@ethereal.email
-spring.mail.password=EfzG62G6vCKMQj3bBa
+spring.mail.username=rebeca.franecki20@ethereal.email
+spring.mail.password=AWhVP53yXGpWJ8FBmf
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
