--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,10 @@
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 		
 			<!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
 		<dependency>
@@ -97,6 +101,7 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
+    		
 	</dependencies>
 	
 	<build>
